<resources>
    <string name="app_name">Primedice</string>
    <string name="menu_picture">menu_picture</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="bet_activity_txt">Make this layout</string>
    <string name="faucet">Faucet</string>
    <string name="zero_btc">0.00000000</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="roll_dice">ROLL DICE</string>
    <string name="max_bet">MAX</string>
    <string name="double_bet">2X</string>
    <string name="half_bet">1/2</string>
    <string name="bet_amount">Bet Amount</string>
    <string name="profitonwin">Profit on Win</string>
    <string name="undertwotimepayout">Under\n49.50</string>
    <string name="multiplier_two">2.000x</string>
    <string name="percentage">49.50%</string>
    <string name="my_bets">My bets</string>
    <string name="latest_bets">Bets</string>
    <string name="high_rollers">High Rollers</string>
    <string name="generate_info">Roll numbers are generated using a HMAC SHA512 function, where the key is the server seed and the client seed with nonce as the message as follows.</string>
    <string name="generate_formula">HMAC(serverSeed, clientSeed-nonce)</string>
    <string name="obtain_roll_info">To obtain the roll number from the resulting HMAC output, the first 5 characters are taken and interpreted as an integer. If the number is greater than 10^6, the next 5 characters skipping the first one are taken. The result is then modulo\'d by 10^4 to get a number 0-9999 and then divided by 10^2 to obtain a number 0-99.99.</string>
    <string name="verification">For more detailed info regarding the provably fair aspect, see the Verification page.</string>
    <string name="username">USER\nNAME</string>
    <string name="username_lower">Username</string>
    <string name="roll_number">ROLL\nNUMBER</string>
    <string name="serverseed">SERVER\nSEED\n(HASHED)</string>
    <string name="clientseed">CLIENT\nSEED\n(NONCED)</string>
    <string name="timebet">TIME\nOF\nBET</string>
    <string name="wageredbet">AMOUNT\nWAGERED</string>
    <string name="payoutbet">BET\nPAYOUT</string>
    <string name="gamebet">BET\nGAME</string>
    <string name="profitbet">BET\nPROFIT</string>
    <string name="serverseed_example">924eb403d28e6130f7756eda0e91cd2e267bbf0b47b52ba94e8223c635077a62</string>
    <string name="clientseed_example">5z3wnzf5cparqcbn0xg0p41r2ffcnlo-5375</string>
    <string name="total_wagered">TOTAL\nWAGERED</string>
    <string name="total_profit">TOTAL\nPROFIT</string>
    <string name="bets_made">BETS\nMADE</string>
    <string name="chat_messages">CHAT\nMESSAGES</string>
    <string name="datejoined">DATE\nJOINED</string>
    <string name="wins">WINS</string>
    <string name="losses">LOSSES</string>
    <string name="luck">LUCK</string>
    <string name="power">POWER</string>
    <string name="scan_qr">Scan QR</string>
    <string name="amount">Amount</string>
    <string name="btcaddress">BTC Address</string>
    <string name="max">MAX</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="stats">Statistics</string>
    <string name="overall">Overall</string>
    <string name="session_wagered">SESSION\nWAGERED</string>
    <string name="session_profit">SESSION\nPROFIT</string>
    <string name="session_bets_made">SESSION\nBETS</string>
    <string name="reset">Reset</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="autobet_limited_info">If rolls aren\'t limited, rolling will continue until you repress the roll button or your session is ended.</string>
    <string name="instruction">Enter the words above</string>
    <string name="verify">Verify</string>
    <string name="reload">Reload</string>
    <string name="show_error">Failed to show CAPTCHA</string>
    <string name="verification_success">Your answer is verified successfully</string>
    <string name="verification_failed">You did not enter the CAPTCHA phrase correctly</string>
    <string name="change_room">Change Chat Room:</string>
</resources>
